--- a/css/master.scss
+++ b/css/master.scss
@@ -5,5 +5,6 @@
   Begin wp-database-analyzer master.css
 ------------------------------------------- */
 
-@import 'src/mixins.scss';
+@import 'src/_config.scss';
+@import 'src/_mixins.scss';
 @import 'src/tables.scss';
