clean up file structure in preparation for version 1

--- a/css/src/tables.scss
+++ b/css/src/tables.scss
@@ -1,19 +1,23 @@
 
-.wpda-table{
-	.no-results{
+.wpdba-table {
+	.no-results {
 
 	}
-	table{
+
+	table {
 		margin: 1em 0;
 		border-collapse: collapse;
-		td, th{
+
+		td, th {
 			border: 1px solid grey;
 			padding: 5px 10px;
 		}
-		thead{
+
+		thead {
 
 		}
-		tbody{
+
+		tbody {
 
 		}
 	}
